[package]
name = "playlist-decoder"
version = "0.7.1"
authors = ["segleralex <segler_alex@web.de>"]
repository = "https://github.com/segler-alex/playlist-decoder-rust"
categories = ["parsing"]
license = "MIT"
description = "a simple playlist decoder which supports: m3u, pls, asx and xspf"

[dependencies]
quick-xml = "0.15.0"